Small Delaunay performance improvements